--- a/CryptoAppXamarin/CryptoAppXamarin/Models/Transactions/DepositTrasnActionPage.xaml
+++ b/CryptoAppXamarin/CryptoAppXamarin/Models/Transactions/DepositTrasnActionPage.xaml
@@ -2,11 +2,24 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CryptoAppXamarin.Models.Transactions.DepositTrasnActionPage">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add"
+                     Order="Primary"
+                     Priority="0"
+                     Command="{Binding TradeCommand}"/>
+    </ContentPage.ToolbarItems>
+
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <RefreshView IsRefreshing="{Binding IsRefreshing}"
+                     Command="{Binding RefreshTransactionCommand}">
+            <CollectionView ItemsSource="{Binding TransactionCell}"
+                            SelectionMode="Single"
+                            ItemTemplate="{StaticResource TransactionCell}"
+                            SelectedItem="{Binding SelectedTransaction}"
+                            SelectionChangedCommand="{Binding TransactionSelectedCommand}">
+
+            </CollectionView>
+        </RefreshView>
     </ContentPage.Content>
 </ContentPage>
