--- a/CryptoAppXamarin/CryptoAppXamarin/Models/Transactions/TransActionsPage.xaml
+++ b/CryptoAppXamarin/CryptoAppXamarin/Models/Transactions/TransActionsPage.xaml
@@ -1,22 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:addtransaction="clr-namespace:CryptoAppXamarin.Models.AddTransaction" 
+             x:DataType="addtransaction:TransactionViewModel"
              x:Class="CryptoAppXamarin.Models.Transactions.TransActionsPage">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add"
                      Order="Primary"
                      Priority="0"
-                     Command="{Binding TradeCommand}"/>
+                     />
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
         <RefreshView IsRefreshing="{Binding IsRefreshing}"
                      Command="{Binding RefreshTransactionCommand}">
-            <CollectionView ItemsSource="{Binding TransactionCell}"
+            <CollectionView ItemsSource="{Binding Transactions}"
                             SelectionMode="Single"
                             ItemTemplate="{StaticResource TransactionCell}"
                             SelectedItem="{Binding SelectedTransaction}"
-                            SelectionChangedCommand="{Binding TransactionSelectedCommand}">
+                            SelectionChangedCommand="{Binding TransactionSelectCommand}">
 
             </CollectionView>
         </RefreshView>
